css/matrix.css
.matrixView {
    display: none;
    left: 6em;
    top: 6em;
    width:500px;
    height:500px;
}

.matrixView svg {
    height: 100%;
    width: 100%;
    position: absolute;
    pointer-events: none;
    shape-rendering: crispedges;
}

.matrixView text {
    text-anchor: middle;
}

.matrixView canvas {
    image-rendering: -moz-crisp-edges;          /* Firefox */
    -ms-interpolation-mode: nearest-neighbor;   /* IE */
    image-rendering: pixelated;                 /* Opera 'n' Chrome */
    -ms-transform-origin: 0 0;
	-moz-transform-origin: 0 0;
	-o-transform-origin: 0 0;
	-webkit-transform-origin: 0 0;
	transform-origin: 0 0;
}

/* For svg output */
.matrixView image {
    image-rendering: -moz-crisp-edges;          /* Firefox */
    -ms-interpolation-mode: nearest-neighbor;   /* IE */
    image-rendering: pixelated;                 /* Opera 'n' Chrome */
}

.matrixView .viewDiv {
    width: auto;
    height: 100%;
}

.viewport {
    overflow: hidden;
    position: absolute;
}

